# Bangla-Embedding

./: .gitignore  FT_Bangla_Embedding_Model_for_RAG_Local.ipynb  README.md  pyproject.toml  requirements.txt
diagram/: Architechture Diagram.drawio  architecture.drawio
latex-codes/: main.tex
notebook/: Evaluate_Bengli_RAG_with_RAGAs.ipynb  FT_Bangla_Embedding_Model_for_RAG.ipynb  FT_Bangla_Embedding_Model_for_RAG_Three_Models.ipynb  FT_Bangla_Embedding_Model_for_RAG_Two_Models.ipynb  Statistical_Significant_Testing.ipynb  result_analysis.ipynb
paper/SourceFiles/: manuscript.tex  references.bib
paper/v1/SourceFiles/: manuscript.tex
paper/v2/: README.md
paper/v2/SourceFiles/: manuscript.tex
paper/v2/config/: model_map.json  model_map_mpnet.json
paper/v2/data/BanglaRQA/: Test.json  Validation.json
paper/v2/results/: bm25_results.csv  ragas_aggregate.csv
paper/v2/scripts/: generate_existing_revision_assets.py  run_bm25_baseline.py  run_mnrl_ablation.py  run_ragas_eval.py
results/: base_model_vs_ft_model_resutls.csv  efficiency_of_model_ft_and_base.csv  full_results_df.csv
src/: main.py
src/analysis/: efficiency.py  stats.py  visualization.py
src/data/: loader.py  processor.py
src/evaluation/: evaluator.py  mteb_eval.py
src/models/: trainer.py  utils.py
